@@ -26,6 +26,11 @@
 	Rev 7233:
 	* schedule.cc: Completing dance schedule (fixes bug #3435764 "Dance Schedule
 	  broken". Tweaked odds of proximity barks for dance schedule.
+	Rev 7234:
+	* paths.*, schedule.cc, pathfinder/PathFinder.h: New Fast_pathfinder_client
+	  that checks it the proper way. Fixes issues with ships and beds reported
+	  on IRC.
+	  
 
 2012-12-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* all: Removed ungodly amount of uneeded data copies when passing tiles and
